--- a/src/components/slider/Slider.scss
+++ b/src/components/slider/Slider.scss
@@ -1,7 +1,7 @@
 @import '../../scss/main.scss';
 
 .slider {
-  .title {
+  &__title {
     font-size: 5rem;
     font-weight: 700;
     text-align: center;
