--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -2,7 +2,7 @@
 
 .nav {
   &__upper {
-    @include container-style(1.6rem, 158rem);
+    @include container-style(158rem, 1.6rem);
     background: $color-blue;
 
     .content {
@@ -46,7 +46,7 @@
   }
 
   &__lower {
-    @include container-style(0.6rem, 158rem);
+    @include container-style(158rem, 0.6rem);
     background: url('../../backgrounds/nav-white.png');
     background-size: cover;
     background-position: center;
@@ -115,12 +115,12 @@
             position: relative;
 
             input {
-              padding: 0.9rem 4rem 0.9rem 1.8rem;
+              padding: 1rem 5rem 1rem 1.8rem;
               background: $color-blue;
               border-radius: 1rem;
               font-size: 1.8rem;
               color: white;
-              width: 25rem;
+              width: 27rem;
               border: none;
 
               &::placeholder {
@@ -128,16 +128,16 @@
               }
             }
 
-            &::after {
-              content: '';
+            button {
               position: absolute;
-              right: 1.8rem;
-              background: url('../../icons/white-search.svg');
-              background-repeat: no-repeat;
               top: 50%;
               transform: translateY(-50%);
-              width: 2.3rem;
               height: 2.3rem;
+              right: 1.8rem;
+
+              img {
+                height: 100%;
+              }
             }
           }
         }
