--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -52,6 +52,10 @@
     background-position: center;
     background-repeat: no-repeat;
 
+    &.no-bg {
+      background: #f7f7f7;
+    }
+
     .content {
       font-weight: 600;
       font-size: 2.4rem;
@@ -115,7 +119,7 @@
             position: relative;
 
             input {
-              padding: 1rem 5rem 1rem 1.8rem;
+              padding: 1.2rem 5rem 1.2rem 1.8rem;
               background: $color-blue;
               border-radius: 1rem;
               font-size: 1.8rem;
