--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -5,7 +5,6 @@
   background: url('../../backgrounds/footer-blue.png') $color-gray;
   background-size: cover;
   background-position: center;
-  background-repeat: no-repeat;
 
   &__content {
     font-family: $font-roboto;
@@ -131,10 +130,68 @@
         align-items: center;
         column-gap: 1.5rem;
 
-        .separator {
-          width: 0.1rem;
-          height: 1em;
-          background: white;
+        a {
+          &:not(:last-child) {
+            &::after {
+              content: '|';
+              margin-left: 1.5rem;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 960px) {
+  .footer {
+    padding-top: 10rem;
+
+    &__content {
+      .upper {
+        column-gap: 5rem;
+        margin-bottom: 8rem;
+
+        .right {
+          flex: 2.1;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .footer {
+    padding-top: 6rem;
+
+    &__content {
+      .upper {
+        flex-direction: column;
+        row-gap: 4rem;
+        margin-bottom: 5rem;
+
+        .left {
+          form {
+            width: 50%;
+          }
+        }
+      }
+
+      .lower {
+        column-gap: 2rem;
+      }
+    }
+  }
+}
+
+@media (max-width: 500px) {
+  .footer {
+    &__content {
+      .upper {
+        .left {
+          form {
+            width: 70%;
+          }
         }
       }
     }
