--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -33,13 +33,13 @@
           display: flex;
           align-items: center;
           column-gap: 1rem;
-        }
 
-        .separator {
-          width: 0.2rem;
-          height: 2rem;
-          background: #c4c4c4;
-          margin: 0 0.6rem;
+          &:not(:last-child) {
+            &::after {
+              content: '|';
+              margin: 0 0.6rem;
+            }
+          }
         }
       }
     }
@@ -50,7 +50,6 @@
     background: url('../../backgrounds/nav-white.png');
     background-size: cover;
     background-position: center;
-    background-repeat: no-repeat;
 
     &.no-bg {
       background: #f7f7f7;
@@ -66,6 +65,11 @@
 
       .logo {
         height: 8.8rem;
+        margin: 0 -1.5rem;
+
+        img {
+          height: 100%;
+        }
       }
 
       .btn-container {
@@ -79,7 +83,7 @@
         .link-container {
           position: absolute;
           top: 4.5rem;
-          padding: 2.5rem 1.4rem 3rem;
+          padding: 2.4rem 1.4rem 3rem;
           background: $color-blue;
           border-radius: 2rem;
           font-size: 2rem;
@@ -101,13 +105,17 @@
 
       .search-container {
         position: relative;
-        width: 26rem;
+        width: 23rem;
 
         button {
           display: flex;
           align-items: center;
           column-gap: 1rem;
           margin-left: auto;
+
+          img {
+            height: 2.3rem;
+          }
         }
 
         .input-container {
@@ -143,6 +151,98 @@
                 height: 100%;
               }
             }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 960px) {
+  .nav {
+    &__upper {
+      .content {
+        .blank {
+          display: none;
+        }
+      }
+    }
+
+    &__lower {
+      padding: 1rem $padding-container-horizontal;
+
+      .content {
+        .logo {
+          height: 8rem;
+        }
+
+        .btn-container {
+          column-gap: 3rem;
+
+          .link-container {
+            left: 50%;
+            transform: translateX(-50%);
+          }
+        }
+
+        .search-container {
+          width: unset;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .nav {
+    &__upper {
+      display: none;
+    }
+
+    &__lower {
+      .content {
+        font-size: 2rem;
+
+        .logo {
+          height: 6rem;
+        }
+
+        .btn-container {
+          column-gap: 1.5rem;
+
+          .link-container {
+            padding: 1.9rem 1rem 2.5rem;
+            font-size: 1.8rem;
+          }
+        }
+
+        .search-container {
+          display: none;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 500px) {
+  .nav {
+    &__lower {
+      padding: 2.5rem $padding-container-horizontal;
+
+      .content {
+        .logo {
+          display: none;
+        }
+
+        .btn-container {
+          font-size: 1.8rem;
+          width: 100%;
+          justify-content: space-between;
+
+          .link-container {
+            padding: 1.5rem 0.8rem 2.3rem;
+            font-size: 1.6rem;
+            top: 3rem;
           }
         }
       }
