--- a/src/pages/activity/Activity.scss
+++ b/src/pages/activity/Activity.scss
@@ -3,6 +3,56 @@
 .activity {
   @include page-style;
 
+  &__modal-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba($color: $color-blue, $alpha: 0.7);
+    z-index: 1;
+
+    .modal {
+      border: 3rem solid $color-gray;
+      border-radius: 1rem;
+      position: relative;
+
+      img {
+        height: 85vh;
+        max-width: 80vw;
+      }
+
+      .close-btn {
+        position: absolute;
+        top: -1.7rem;
+        right: -2.9rem;
+
+        &:hover {
+          cursor: pointer;
+        }
+
+        .line {
+          background: #61646b;
+          width: 3rem;
+          height: 0.3rem;
+
+          &.slash {
+            transform: rotate(45deg);
+            position: relative;
+            top: 0.3rem;
+          }
+
+          &.back-slash {
+            transform: rotate(-45deg);
+          }
+        }
+      }
+    }
+  }
+
   &__container {
     @include container-style(170rem, 0, 8rem);
 
@@ -53,6 +103,18 @@
 
         a {
           text-decoration: underline;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .activity {
+    &__modal-container {
+      .modal {
+        img {
+          height: unset;
         }
       }
     }
