--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -42,6 +42,12 @@
           }
         }
       }
+
+      .login {
+        &:hover {
+          cursor: pointer;
+        }
+      }
     }
   }
 
