--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -72,7 +72,7 @@
       .right {
         flex: 2.9;
 
-        & > div {
+        &__row {
           display: flex;
           align-items: center;
           column-gap: 1rem;
@@ -81,12 +81,29 @@
             margin-bottom: 1.6rem;
           }
 
+          &.link {
+            p {
+              text-decoration: underline;
+            }
+          }
+
           span {
             font-weight: 700;
           }
 
           img {
             height: 2.5rem;
+
+            &.bg-yellow {
+              width: 2.5rem;
+              height: 2.5rem;
+              border-radius: 50%;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              padding: 0.5rem;
+              background-color: #ffc550;
+            }
           }
 
           a {
