--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -11,7 +11,7 @@
       font-size: 1.6rem;
       color: white;
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
       align-items: center;
 
       img {
@@ -24,9 +24,9 @@
         column-gap: 1rem;
       }
 
-      .blank {
-        width: 6.666rem;
-      }
+      // .blank {
+      //   width: 6.666rem;
+      // }
 
       .addr-working-container {
         & > div {
@@ -43,11 +43,11 @@
         }
       }
 
-      .login {
-        &:hover {
-          cursor: pointer;
-        }
-      }
+      // .login {
+      //   &:hover {
+      //     cursor: pointer;
+      //   }
+      // }
     }
   }
 
@@ -108,6 +108,10 @@
       .search-container {
         position: relative;
         width: 23rem;
+
+        &.hidden {
+          visibility: hidden;
+        }
 
         button {
           display: flex;
@@ -172,13 +176,13 @@
 
 @media (max-width: 960px) {
   .nav {
-    &__upper {
-      .content {
-        .blank {
-          display: none;
-        }
-      }
-    }
+    // &__upper {
+    //   .content {
+    //     .blank {
+    //       display: none;
+    //     }
+    //   }
+    // }
 
     &__lower {
       padding: 1rem $padding-container-horizontal;
