--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -41,3 +41,13 @@
     }
   }
 }
+
+@mixin admin-page-style {
+  &__title {
+    margin: 5.5rem 0 6rem;
+    text-align: center;
+    font-weight: 600;
+    font-size: 2.4rem;
+    color: $color-blue;
+  }
+}
