--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,5 +6,6 @@ $font-raleway: 'Raleway', sans-serif;
 
 $color-blue: #092259;
 $color-gray: #c0bcbc;
+$color-red: #af2035e6;
 
 $padding-container-horizontal: 2.5rem;
