--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,6 +6,7 @@ $font-raleway: 'Raleway', sans-serif;
 
 $color-blue: #092259;
 $color-gray: #c0bcbc;
+$color-light-gray: #d9d9d9;
 $color-red: #af2035e6;
 
 $padding-container-horizontal: 2.5rem;
