--- a/src/pages/memberCurrent/MemberCurrent.scss
+++ b/src/pages/memberCurrent/MemberCurrent.scss
@@ -23,6 +23,7 @@
         &.full-width {
           aspect-ratio: unset;
           width: 100%;
+          border-radius: 0.8rem;
         }
       }
 
