--- a/src/pages/admin/components/memberCurrent/memberCurrentCard/MemberCurrentCard.scss
+++ b/src/pages/admin/components/memberCurrent/memberCurrentCard/MemberCurrentCard.scss
@@ -1,9 +1,7 @@
-@import '../../../../scss/main.scss';
+@import '../../../../../scss/main.scss';
 
 .member-current-card {
   @include admin-card-style;
-  font-size: 1.6rem;
-  font-weight: 500;
 
   label {
     font-size: 1.5rem;
@@ -107,15 +105,6 @@
       color: white;
       padding: 0.8rem 3rem;
       width: fit-content;
-    }
-  }
-
-  &__delete-btn {
-    img {
-      background: $color-light-gray;
-      height: fit-content;
-      padding: 0.5rem 0.7rem;
-      border-radius: 1rem;
     }
   }
 }
