--- a/src/pages/admin/main/AdminMain.scss
+++ b/src/pages/admin/main/AdminMain.scss
@@ -3,7 +3,7 @@
 .admin-main {
   @include admin-page-style;
 
-  select {
+  &__select {
     margin: 0 auto;
     display: block;
     font-size: 1.6rem;
