--- a/src/pages/admin/components/publication/publicationCard/PublicationCard.scss
+++ b/src/pages/admin/components/publication/publicationCard/PublicationCard.scss
@@ -3,16 +3,6 @@
 .publication-card {
   @include admin-card-style;
 
-  label {
-    font-size: 1.5rem;
-    font-weight: 600;
-  }
-
-  input[type='text'] {
-    width: 40rem;
-    padding: 0.5rem 1rem;
-  }
-
   &__image-container {
     display: flex;
     flex-direction: column;
@@ -26,7 +16,7 @@
     }
 
     input {
-      width: 28rem;
+      width: 40rem * 0.7;
     }
   }
 
@@ -40,13 +30,7 @@
     .title-container,
     .link-container,
     .year-container {
-      display: flex;
-      flex-direction: column;
-      row-gap: 0.7rem;
-
-      label {
-        margin-bottom: -0.2rem;
-      }
+      @include admin-input-container-style;
     }
 
     .full-name-container {
