--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -100,6 +100,16 @@
   font-size: 1.6rem;
   font-weight: 500;
 
+  label {
+    font-size: 1.5rem;
+    font-weight: 600;
+  }
+
+  input[type='text'] {
+    width: 40rem;
+    padding: 0.5rem 1rem;
+  }
+
   &__title {
     font-weight: 600;
     font-size: 2rem;
@@ -114,5 +124,15 @@
       padding: 0.5rem 0.7rem;
       border-radius: 1rem;
     }
+  }
+}
+
+@mixin admin-input-container-style {
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.7rem;
+
+  label {
+    margin-bottom: -0.2rem;
   }
 }
