--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -85,6 +85,8 @@
         .link-container {
           position: absolute;
           top: 4.5rem;
+          left: 50%;
+          transform: translateX(-50%);
           padding: 2.4rem 1.4rem 3rem;
           background: $color-blue;
           border-radius: 2rem;
@@ -261,6 +263,8 @@
           padding: 0.5rem;
           position: relative;
           z-index: 1;
+          min-width: 3.5rem;
+          min-height: 3rem;
 
           &:hover {
             cursor: pointer;
@@ -275,12 +279,16 @@
           }
 
           &.active {
-            row-gap: 0;
+            // row-gap: 0;
 
             .nav-menu__line {
+              position: absolute;
+              right: 0.5rem;
+
               &.top {
                 width: 2.5rem;
-                transform: translateY(0.125rem) rotate(135deg);
+                top: 1.375rem;
+                transform: rotate(135deg);
               }
 
               &.middle {
@@ -291,7 +299,8 @@
 
               &.bottom {
                 width: 2.5rem;
-                transform: translateY(-0.125rem) rotate(-135deg);
+                bottom: 1.375rem;
+                transform: rotate(-135deg);
               }
             }
           }
