--- a/src/pages/publication/Publication.scss
+++ b/src/pages/publication/Publication.scss
@@ -7,6 +7,9 @@
 
   &__container {
     @include container-style(135rem, 0, 8rem);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     .content {
       font-size: 2rem;
