--- a/src/pages/recruitment/Recruitment.scss
+++ b/src/pages/recruitment/Recruitment.scss
@@ -5,6 +5,9 @@
 
   &__container {
     @include container-style(100rem, 0, 8rem);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     .content {
       font-size: 2rem;
@@ -14,6 +17,12 @@
 
       & > img {
         width: 100%;
+        opacity: 0;
+        transition: opacity 1s ease;
+
+        &.show {
+          opacity: 1;
+        }
       }
 
       & > div {
